// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/units/NormalButton Login PC 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-17hhhx2"
      type="button"
    >
      ログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots common/units/NormalButton Login SP 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-1h17ski"
      type="button"
    >
      ログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots common/units/NormalButton Post 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-154oc8v"
      type="button"
    >
      投稿
    </button>
  </div>
</div>
`;

exports[`Storyshots common/units/NormalButton Register 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-154oc8v"
      type="button"
    >
      登録
    </button>
  </div>
</div>
`;

exports[`Storyshots common/units/NormalButton Signup PC 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-154oc8v"
      type="button"
    >
      新規会員登録
    </button>
  </div>
</div>
`;

exports[`Storyshots common/units/NormalButton Signup SP 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-10vawgf"
      type="button"
    >
      会員登録
    </button>
  </div>
</div>
`;

exports[`Storyshots organisms/Header Loggined Header 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-162tvoi"
    />
  </div>
</div>
`;

exports[`Storyshots organisms/Header Logouted Header 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-1icstj2"
    />
  </div>
</div>
`;
